--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.1.6.RELEASE</version>
             </plugin>
         </plugins>
     </build>
