Add IdGenerator, StaticDataDAO, and add parentSeq to Param.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,6 @@ mail.fromEmail=chenmm6@asiainfo.com
 mail.fromPassword=arenagod@123
 
 spring.datasource.url=jdbc:mysql://172.11.32.21:3306/uip
-spring.datasource.username=ailfe
+spring.datasource.username=ailife
 spring.datasource.password=ailife
 spring.datasource.continueOnError=false
