--- a/pom.xml
+++ b/pom.xml
@@ -63,9 +63,9 @@
             <version>1.5.0-b01</version>
         </dependency>
         <dependency>
-            <groupId>servletapi</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.4-20040521</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.33</version>
         </dependency>
     </dependencies>
 
