Add loadProjectFile method to FileUtil.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ doc.inter.code=100000000001
 doc.inter.rootParamPath=inter/rootParam.json
 doc.inter.requestParamPath=inter/requestParam.json
 doc.inter.responseParamPath=inter/responseParam.json
+doc.inter.docPath=doc/Telenor项目接口协议(CRM)_v0.6.docx
 
 mail.fromEmail=chenmm6@asiainfo.com
 mail.fromPassword=arenagod@123
