--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,12 @@ doc.inter.code=100000000001
 doc.inter.rootParamPath=inter/rootParam.json
 doc.inter.requestParamPath=inter/requestParam.json
 doc.inter.responseParamPath=inter/responseParam.json
-doc.inter.docPath=doc/Telenor项目接口协议(CRM)_v0.6.docx
+doc.inter.docPath=doc/Telenor\u9879\u76ee\u63a5\u53e3\u534f\u8bae(CRM)_v0.6.docx
 
 mail.fromEmail=chenmm6@asiainfo.com
 mail.fromPassword=arenagod@123
 
-spring.datasource.url=jdbc:mysql://172.11.32.21:3306/uip
+spring.datasource.url=jdbc:mysql://10.11.32.19:3306/uip
 spring.datasource.username=ailife
 spring.datasource.password=ailife
 spring.datasource.continueOnError=false
